<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/purplebg01"
    tools:context=".Loginactivity">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:radius="25dp"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="45dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_margin="10dp"
        android:background="@drawable/login_pagebtn"
        android:drawableLeft="@drawable/baseline_account_circle_24"
        android:drawablePadding="20dp"
        android:fontFamily="sans-serif-condensed-light"
        android:hint="@string/username"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_margin="10dp"
        android:background="@drawable/login_pagebtn"
        android:drawableLeft="@drawable/baseline_ad_units_24"
        android:drawablePadding="20dp"
        android:fontFamily="sans-serif-condensed-light"        android:hint="@string/password"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        android:inputType="textPassword"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginbtn"
        android:layout_below="@id/password"
        android:text="LOGIN"
        android:backgroundTint="#30ffffff"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:textColor="@color/black"
     />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/others"
        android:text="Or sign in with"
        android:textSize="15sp"
        android:layout_above="@id/socialicons"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:id="@+id/socialicons">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/google_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="18sp"

            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/social_icons"
            android:drawableStart="@drawable/gg"
            android:drawablePadding="-10dp"
            android:paddingStart="20dp"
            android:gravity="center"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/white"
             />
<!--        <ImageView-->
<!--            android:layout_width="48dp"-->
<!--            android:layout_height="48dp"-->
<!--            android:layout_margin="20dp"-->
<!--            android:src="@drawable/gg"-->
<!--            android:scaleType="centerCrop"/>-->

    </LinearLayout>
</RelativeLayout>